[project]
name = "lofar-vlbi-pipeline"
authors = [
    {name = "James Petley"},
    {name = "Frist Sweijen"},
    {name = "Leah Morabito"}
]
version = "2025.12.1"
description = "lofar-vlbi-pipeline containing the cli tool plot_field"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "astropy>=7.0.0",
    "astroquery>=0.4.11",
    "matplotlib>=3.9.3",
    "pyvo>=1.6",
    "requests>=2.32.3",
    "scipy>=1.14.1",
    "setuptools>=80.9.0",
]
license = "GPL-3.0-or-later"
keywords = ["radio", "astronomy", "VLBI", "LOFAR"]

[project.urls]
Repository="https://github.com/LOFAR-VLBI/lofar-vlbi-pipeline"


[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
plot_field = "plot_field.plot_field:main"
lofar-vlbi-pipeline = "plot_field:main"

[tool.uv]
package = true

[tool.setuptools]
py-modules = []
